Unable to allocate bit maps or card tables for parallel gc for the requested heap

XMLWordPrintable

    • gc
    • b49
    • generic, sparc
    • generic, solaris_10

        FULL PRODUCT VERSION :
        bwadmin@sun20-t5140$ java/jdk1.6.0_33/bin/java -version
        java version "1.6.0_33"
        Java(TM) SE Runtime Environment (build 1.6.0_33-b03)
        Java HotSpot(TM) Server VM (build 20.8-b03, mixed mode)


        ADDITIONAL OS VERSION INFORMATION :
        SunOS sun20-t5140 5.11 11.0 sun4v sparc SUNW,T5140

        EXTRA RELEVANT SYSTEM CONFIGURATION :
        RAM 32G, free RAM less than 26G

        A DESCRIPTION OF THE PROBLEM :
        Using JDK7u5 on a system with many CPUs and a lot of RAM, the JVM failed to start when there is no -Xmx option specified.

        REGRESSION. Last worked in version 6u31

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        Run the specified program on a server.

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        bwadmin@sun20-t5140$ java/jdk1.6.0_33/bin/java -d64 -classpath ./test.jar TestJava
        This is a test

        ACTUAL -
        bwadmin@sun20-t5140$ java/jdk1.7.0_05/bin/java -d64 -classpath ./test.jar TestJava
        Error occurred during initialization of VM
        Unable to allocate bit map for parallel garbage collection for the requested heap size.
        Error: Could not create the Java Virtual Machine.
        Error: A fatal exception has occurred. Program will exit.


        ERROR MESSAGES/STACK TRACES THAT OCCUR :
        As indicate in the actual result.

        REPRODUCIBILITY :
        This bug can be reproduced always.

        ---------- BEGIN SOURCE ----------

        public class TestJava
        {
          public static void main(String[] args)
          {
            System.out.println("This is a test");
          }
        }

        ---------- END SOURCE ----------

        CUSTOMER SUBMITTED WORKAROUND :
        2 possible workaround:
          1. Add -Xmx2m
          2. Add -XX:+UseSerialGC

              Assignee:
              Tao Mao
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: